--- a/package.json
+++ b/package.json
@@ -8,9 +8,16 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@quasar/vite-plugin": "^1.3.0",
+    "@typescript-eslint/parser": "^5.55.0",
+    "eslint": "^8.36.0",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "nuxt": "^3.3.1",
-    "sass": "1.32.12"
+    "prettier": "^2.8.4",
+    "sass": "1.32.12",
+    "typescript": "^4.9.5"
   },
   "dependencies": {
     "@quasar/extras": "^1.15.11",
